--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">     
 </head>
 <body>
     <div class="center-box">
         <div class="center-item"></div>
     </div>
-    <div>
-        <img src="dojo-icon.png" alt="dojo-icon">
-        <h1>Coding Dojo</h1>
+
+
+    <div id="nav-bar">
+        <div id="logo">
+            <img src="dojo-icon.png" alt="dojo-icon" width="60px" height="40px">
+            <h1>Coding Dojo</h1>
+        </div>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Contacts</a></li>
